<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.6</version>
        <relativePath/>
    </parent>
    <groupId>Abhito</groupId>
    <artifactId>MusicMonke</artifactId>
    <version>1.3.2</version>
    <name>MusicMonke</name>
    <description>MusicMonke</description>
    <properties>
        <java.version>25</java.version>
        <jda.version>6.4.1</jda.version>
        <jdave.version>0.1.8</jdave.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>${jda.version}</version>
        </dependency>

        <dependency>
            <groupId>org.jetbrains.kotlin</groupId>
            <artifactId>kotlin-stdlib</artifactId>
            <version>2.2.0</version>
        </dependency>

        <dependency>
            <groupId>club.minnced</groupId>
            <artifactId>jdave-api</artifactId>
            <version>${jdave.version}</version>
        </dependency>
        <dependency>
            <groupId>club.minnced</groupId>
            <artifactId>jdave-native-win-x86-64</artifactId>
            <version>${jdave.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>club.minnced</groupId>
            <artifactId>jdave-native-linux-x86-64</artifactId>
            <version>${jdave.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>club.minnced</groupId>
            <artifactId>jdave-native-linux-aarch64</artifactId>
            <version>${jdave.version}</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>dev.lavalink.youtube</groupId>
            <artifactId>v2</artifactId>
            <version>1.18.1</version>
        </dependency>

        <dependency>
            <groupId>dev.arbjerg</groupId>
            <artifactId>lavaplayer</artifactId>
            <version>2.2.6</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

    </dependencies>

    <repositories>
        <repository>
            <id>arbjergDev-releases</id>
            <name>Lavalink Repository</name>
            <url>https://maven.lavalink.dev/releases</url>
        </repository>
        <repository>
            <id>jitpack</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <finalName>MusicMonke</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <jvmArguments>--enable-native-access=ALL-UNNAMED</jvmArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>
        </plugins>
    </build>

</project>
